--- a/Home.html
+++ b/Home.html
@@ -1,2 +1,55 @@
 <html>
+  <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Carousel Index</title>
+ 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+  </head>
+  <body>
+  <div class="container">
+  <div id= "myCarousel" class="carousel slide" data-ride="carousel">
+  <ol class= "carousel-indicators">
+	<li data-target="#myCarousel" data-slide-to="0" class="active">
+	</li>
+	<li data-target="#myCarousel" data-slide-to="1">
+	</li>
+	<li data-target="#myCarousel" data-slide-to="2">
+	</li>
+  </ol>
+
+<div class="carousel-inner">
+	<div class="item active">
+		<img src="CarouselImage1.JPG" alt=" a car" style="width: 100%;">
+	</div>
+<div class="item">
+		<img src="CarouselImage2.jpg" alt="another car" style="width: 100%;">
+</div>
+<div class="item">
+		<img src="CarouselImage3.jpg" alt="A third car" style="width:100%;">	
+</div>
+ <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+	
+    
+	
+ 
+  </body>
+</html>
 </html>
